# hello

gadder_gold_token/: Cargo.toml  admin-keypair.json  bridge-admin-keypair.json  diesel.toml  governance-keypair.json
gadder_gold_token/src/: ai_contract.rs  cross_chain_bridge_contract.rs  governance_contract.rs  lib.rs  schema.rs  staking_contract.rs
