[package]
name = "gadder_gold_token"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "2.2.1"
spl-token = "7.0.0"
mpl-token-metadata = { git = "https://github.com/metaplex-foundation/mpl-token-metadata", branch = "main" }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
borsh = "1.5.5"
borsh-derive = "1.5.5"
diesel = { version = "2.2.2", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }

[dev-dependencies]
wiremock = "0.6.2"
tokio-test = "0.4.4"